[package]
name = "exp-epa"
version = "0.1.0"
authors = ["Martin Bidlingmaier <martin.bidlingmaier@mbid.me>", "Jakob Botsch Nielsen <Jakob.botsch.nielsen@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
eqlog_deterministic_hash = []
trace_model = []

[dependencies]
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
regex = "1"

[build-dependencies]
lalrpop = { version = "0.19.0", features = [ "lexer" ] }
